// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sketch renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-sketch sketch-picker"
    style="width: 200px; padding: 10px 10px 0px; box-sizing: initial; background: rgb(255, 255, 255); -webkit-border-radius: 4px; border-radius: 4px; -webkit-box-shadow: 0 0 0 1px rgba(0,0,0,.15), 0 8px 16px rgba(0,0,0,.15); box-shadow: 0 0 0 1px rgba(0,0,0,.15), 0 8px 16px rgba(0,0,0,.15);"
  >
    <div
      style="width: 100%; padding-bottom: 75%; position: relative; overflow: hidden;"
    >
      <div
        class="rc-saturation"
        style="background: rgb(43, 0, 255);"
      >
        <div
          class="rc-saturation__white"
          style="background: linear-gradient(to right, rgb(255, 255, 255), rgba(255, 255, 255, 0));"
        >
          <div
            class="rc-saturation__black"
            style="background: linear-gradient(to top, rgb(0, 0, 0), rgba(0, 0, 0, 0));"
          />
          <div
            class="rc-saturation__pointer"
            style="top: 70%; left: 66.66666666666667%;"
          >
            <div
              class="rc-saturation__circle"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="flexbox-fix"
      style="display: flex;"
    >
      <div
        style="padding: 4px 0px; flex: 1 1 0%;"
      >
        <div
          style="position: relative; height: 10px; overflow: hidden;"
        >
          <div
            class="rc-hue-control"
          >
            <div
              class="rc-hue-control__container"
              style="background: linear-gradient(to right, rgb(255, 0, 0) 0%, rgb(255, 255, 0) 17%, rgb(0, 255, 0) 33%, rgb(0, 255, 255) 50%, rgb(0, 0, 255) 67%, rgb(255, 0, 255) 83%, rgb(255, 0, 0) 100%);"
            >
              <div
                class="rc-hue-control__pointer"
                style="left: 69.44444444444443%;"
              >
                <div
                  class="rc-hue-control__slider"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          style="position: relative; height: 10px; margin-top: 4px; overflow: hidden;"
        >
          <div
            class="rc-alpha-control"
          >
            <div
              class="rc-alpha-control__checkboard"
            >
              <div
                class="rc-checkboard"
                style="background: url("null");"
              />
            </div>
            <div
              class="rc-alpha-control__gradient"
              style="background: linear-gradient(to right, rgba(34, 25, 77, 0) 0%, rgb(34, 25, 77) 100%);"
            />
            <div
              class="rc-alpha-control__container"
            >
              <div
                class="rc-alpha-control__pointer"
                style="left: 100%;"
              >
                <div
                  class="rc-alpha-control__slider"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="width: 24px; height: 24px; position: relative; margin-top: 4px; margin-left: 4px; -webkit-border-radius: 3px; border-radius: 3px;"
      >
        <div
          class="rc-checkboard"
          style="background: url("null");"
        />
        <div
          style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; -webkit-border-radius: 2px; border-radius: 2px; background: rgb(34, 25, 77); -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15), inset 0 0 4px rgba(0,0,0,.25); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15), inset 0 0 4px rgba(0,0,0,.25);"
        />
      </div>
    </div>
    <div
      class="flexbox-fix"
      style="display: flex; padding-top: 4px;"
    >
      <div
        style="flex: 2 1 0%;"
      >
        <div
          class="rc-editable-input"
        >
          <input
            class="rc-editable-input__input"
            id="rc-editable-input-1"
            spellcheck="false"
            style="width: 80%; padding: 4px 10% 3px; border: medium; -webkit-box-shadow: inset 0 0 0 1px #ccc; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;"
            value="22194D"
          />
          <label
            class="rc-editable-input__label"
            for="rc-editable-input-1"
            style="display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize;"
          >
            hex
          </label>
        </div>
      </div>
      <div
        style="flex: 1 1 0%; padding-left: 6px;"
      >
        <div
          class="rc-editable-input rc-editable-input--drag-label"
        >
          <input
            class="rc-editable-input__input"
            id="rc-editable-input-2"
            spellcheck="false"
            style="width: 80%; padding: 4px 10% 3px; border: medium; -webkit-box-shadow: inset 0 0 0 1px #ccc; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;"
            value="34"
          />
          <label
            class="rc-editable-input__label rc-editable-input--drag-label"
            for="rc-editable-input-2"
            style="display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize;"
          >
            r
          </label>
        </div>
      </div>
      <div
        style="flex: 1 1 0%; padding-left: 6px;"
      >
        <div
          class="rc-editable-input rc-editable-input--drag-label"
        >
          <input
            class="rc-editable-input__input"
            id="rc-editable-input-3"
            spellcheck="false"
            style="width: 80%; padding: 4px 10% 3px; border: medium; -webkit-box-shadow: inset 0 0 0 1px #ccc; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;"
            value="25"
          />
          <label
            class="rc-editable-input__label rc-editable-input--drag-label"
            for="rc-editable-input-3"
            style="display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize;"
          >
            g
          </label>
        </div>
      </div>
      <div
        style="flex: 1 1 0%; padding-left: 6px;"
      >
        <div
          class="rc-editable-input rc-editable-input--drag-label"
        >
          <input
            class="rc-editable-input__input"
            id="rc-editable-input-4"
            spellcheck="false"
            style="width: 80%; padding: 4px 10% 3px; border: medium; -webkit-box-shadow: inset 0 0 0 1px #ccc; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;"
            value="77"
          />
          <label
            class="rc-editable-input__label rc-editable-input--drag-label"
            for="rc-editable-input-4"
            style="display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize;"
          >
            b
          </label>
        </div>
      </div>
      <div
        style="flex: 1 1 0%; padding-left: 6px;"
      >
        <div
          class="rc-editable-input rc-editable-input--drag-label"
        >
          <input
            class="rc-editable-input__input"
            id="rc-editable-input-5"
            spellcheck="false"
            style="width: 80%; padding: 4px 10% 3px; border: medium; -webkit-box-shadow: inset 0 0 0 1px #ccc; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;"
            value="100"
          />
          <label
            class="rc-editable-input__label rc-editable-input--drag-label"
            for="rc-editable-input-5"
            style="display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize;"
          >
            a
          </label>
        </div>
      </div>
    </div>
    <div
      class="flexbox-fix"
      style="margin: 0px -10px; padding: 10px 0px 0px 10px; border-top: 1px solid rgb(238, 238, 238); display: flex; flex-wrap: wrap; position: relative;"
    >
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(208, 2, 27); -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#D0021B"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(245, 166, 35); -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#F5A623"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(248, 231, 28); -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#F8E71C"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(139, 87, 42); -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#8B572A"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(126, 211, 33); -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#7ED321"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(65, 117, 5); -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#417505"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(189, 16, 224); -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#BD10E0"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(144, 19, 254); -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#9013FE"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(74, 144, 226); -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#4A90E2"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(80, 227, 194); -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#50E3C2"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(184, 233, 134); -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#B8E986"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(0, 0, 0); -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#000000"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(74, 74, 74); -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#4A4A4A"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(155, 155, 155); -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#9B9B9B"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(255, 255, 255); -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#FFFFFF"
          />
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SketchFields renders correctly 1`] = `
<DocumentFragment>
  <div
    class="flexbox-fix"
    style="display: flex; padding-top: 4px;"
  >
    <div
      style="flex: 2 1 0%;"
    >
      <div
        class="rc-editable-input"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-26"
          spellcheck="false"
          style="width: 80%; padding: 4px 10% 3px; border: medium; -webkit-box-shadow: inset 0 0 0 1px #ccc; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;"
          value="FF0000"
        />
        <label
          class="rc-editable-input__label"
          for="rc-editable-input-26"
          style="display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize;"
        >
          hex
        </label>
      </div>
    </div>
    <div
      style="flex: 1 1 0%; padding-left: 6px;"
    >
      <div
        class="rc-editable-input rc-editable-input--drag-label"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-27"
          spellcheck="false"
          style="width: 80%; padding: 4px 10% 3px; border: medium; -webkit-box-shadow: inset 0 0 0 1px #ccc; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;"
          value="255"
        />
        <label
          class="rc-editable-input__label rc-editable-input--drag-label"
          for="rc-editable-input-27"
          style="display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize;"
        >
          r
        </label>
      </div>
    </div>
    <div
      style="flex: 1 1 0%; padding-left: 6px;"
    >
      <div
        class="rc-editable-input rc-editable-input--drag-label"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-28"
          spellcheck="false"
          style="width: 80%; padding: 4px 10% 3px; border: medium; -webkit-box-shadow: inset 0 0 0 1px #ccc; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;"
          value="0"
        />
        <label
          class="rc-editable-input__label rc-editable-input--drag-label"
          for="rc-editable-input-28"
          style="display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize;"
        >
          g
        </label>
      </div>
    </div>
    <div
      style="flex: 1 1 0%; padding-left: 6px;"
    >
      <div
        class="rc-editable-input rc-editable-input--drag-label"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-29"
          spellcheck="false"
          style="width: 80%; padding: 4px 10% 3px; border: medium; -webkit-box-shadow: inset 0 0 0 1px #ccc; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;"
          value="0"
        />
        <label
          class="rc-editable-input__label rc-editable-input--drag-label"
          for="rc-editable-input-29"
          style="display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize;"
        >
          b
        </label>
      </div>
    </div>
    <div
      style="flex: 1 1 0%; padding-left: 6px;"
    >
      <div
        class="rc-editable-input rc-editable-input--drag-label"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-30"
          spellcheck="false"
          style="width: 80%; padding: 4px 10% 3px; border: medium; -webkit-box-shadow: inset 0 0 0 1px #ccc; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;"
          value="100"
        />
        <label
          class="rc-editable-input__label rc-editable-input--drag-label"
          for="rc-editable-input-30"
          style="display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize;"
        >
          a
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SketchPresetColors renders correctly 1`] = `
<DocumentFragment>
  <div
    class="flexbox-fix"
    style="margin: 0px -10px; padding: 10px 0px 0px 10px; border-top: 1px solid rgb(238, 238, 238); display: flex; flex-wrap: wrap; position: relative;"
  >
    <div
      style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(255, 255, 255); -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
          tabindex="0"
          title="#fff"
        />
      </span>
    </div>
    <div
      style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(153, 153, 153); -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
          tabindex="0"
          title="#999"
        />
      </span>
    </div>
    <div
      style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(0, 0, 0); -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
          tabindex="0"
          title="#000"
        />
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SketchPresetColors with custom titles renders correctly 1`] = `
<DocumentFragment>
  <div
    class="flexbox-fix"
    style="margin: 0px -10px; padding: 10px 0px 0px 10px; border-top: 1px solid rgb(238, 238, 238); display: flex; flex-wrap: wrap; position: relative;"
  >
    <div
      style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(255, 255, 255); -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
          tabindex="0"
          title="white"
        />
      </span>
    </div>
    <div
      style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(153, 153, 153); -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
          tabindex="0"
          title="gray"
        />
      </span>
    </div>
    <div
      style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(0, 0, 0); -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
          tabindex="0"
          title="#000"
        />
      </span>
    </div>
    <div
      style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(255, 0, 0); -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
          tabindex="0"
          title="#f00"
        />
      </span>
    </div>
  </div>
</DocumentFragment>
`;
